--- a/server/package.json
+++ b/server/package.json
@@ -4,14 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "tsx watch index.ts",
+    "dev": "tsx watch --env-file=.env index.ts",
     "build": "tsc",
-    "start": "node build/index.js"
+    "start": "node --env-file=.env ./build/index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "type": "commonjs",
+  "type": "module",
   "dependencies": {
     "express": "^5.1.0"
   },
