--- a/server/package.json
+++ b/server/package.json
@@ -13,11 +13,13 @@
   "license": "ISC",
   "type": "module",
   "dependencies": {
+    "@prisma/client": "^6.9.0",
     "express": "^5.1.0"
   },
   "devDependencies": {
     "@types/express": "^5.0.3",
     "@types/node": "^24.0.1",
+    "prisma": "^6.9.0",
     "tsx": "^4.7.1",
     "typescript": "^5.8.3"
   }
